# ipyscore

./: .coveragerc  .gitignore  MANIFEST.in  README.md  codecov.yml  install.json  ipyscore.json  package-lock.json  package.json  pyproject.toml  pytest.ini  webpack.config.js
docs/: Makefile  environment.yml  make.bat
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
etc/jupyter/jupyter_notebook_config.d/: ipyscore.json
etc/jupyter/jupyter_server_config.d/: ipyscore.json
examples/: introduction.ipynb  precious_lord.json  smoosic.ipynb  vexflow.ipynb
ipyscore/: __init__.py  _frontend.py  handler.py  server_extension.py  smoosic_widget.py  vexflow_widget.py  widget.py
ipyscore/nbextension/: extension.js
ipyscore/tests/: test_nbextension_path.py
src/: extension.ts  plugin.ts  smoosic_index.ts  smoosic_widget.ts  vexflow-debug.js  vexflow_index.ts  vexflow_widget.ts  widget.ts
